--- a/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
+++ b/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
@@ -18,5 +18,26 @@
     <ClCompile Include="bsearch.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Lab10_prog1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab10_prog2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab9_prog5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab9_prog4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab9_prog3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab9_prog2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab9_prog1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
