--- a/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj
+++ b/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bsearch.c">
+    <ClCompile Include="Lab_prog3.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Lab10_prog1.c">
