--- a/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
+++ b/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bsearch.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Lab10_prog1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -37,6 +34,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Lab9_prog1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab_prog3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
