--- a/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
+++ b/21.05.11_SW_Seminar/21.05.11_SW_Seminar/21.05.11_SW_Seminar.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="Lab9_prog1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Lab_prog3.c">
+    <ClCompile Include="Lab10_prog3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
