--- a/21.05.04_SW_Seminar/21.05.04_SW_Seminar/21.05.04_SW_Seminar.vcxproj
+++ b/21.05.04_SW_Seminar/21.05.04_SW_Seminar/21.05.04_SW_Seminar.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1d19997c-070c-4628-83fc-b14c1abe9f43}</ProjectGuid>
     <RootNamespace>My210504SWSeminar</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>2021.05.04_SW_Seminar</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
