--- a/Library_System/Library_System/Library_System.vcxproj.filters
+++ b/Library_System/Library_System/Library_System.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="main_1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
