--- a/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
+++ b/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
@@ -18,8 +18,13 @@
     <ClCompile Include="Lab11_prog1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Lab11_prog3.c">
+    <ClCompile Include="Lab11_prog2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="font.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
