--- a/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
+++ b/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="Lab11_prog2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Lab11_prog3_Main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab11_prog3_Rect.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="font.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="rect.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
