--- a/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj
+++ b/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj
@@ -86,7 +86,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -145,8 +145,13 @@
     <ClCompile Include="Lab11_prog2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Lab11_prog3_Main.c" />
-    <ClCompile Include="Lab11_prog3_Rect.c" />
+    <ClCompile Include="Lab11_prog3_Main.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab11_prog3_Rect.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab11_prog4.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="font.h" />
