--- a/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
+++ b/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar/2021.05.18_SW_Seminar.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Lab11_prog3_Rect.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Lab11_prog4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="font.h">
