--- a/Library_System/Library_System/Library_System.vcxproj.filters
+++ b/Library_System/Library_System/Library_System.vcxproj.filters
@@ -21,5 +21,22 @@
     <ClCompile Include="main_2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Menu.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Book.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Menu.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Book.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
