--- a/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar.vcxproj
+++ b/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar.vcxproj
@@ -139,8 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab12_prog1.c" />
-    <ClCompile Include="Lab12_prog2.c" />
+    <ClCompile Include="Lab12_prog1.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab12_prog2.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Lab12_prog3.c" />
+    <ClCompile Include="Lab12_prog4.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
