--- a/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar.vcxproj.filters
+++ b/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar/2021.05.25_SW_Seminar.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="Lab12_prog2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Lab12_prog4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Lab12_prog3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
