--- a/Library_System/Library_System/Library_System.vcxproj.filters
+++ b/Library_System/Library_System/Library_System.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClCompile Include="Book.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FileIo.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Book.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FileIo.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
