--- a/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar.vcxproj
+++ b/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar.vcxproj
@@ -148,9 +148,19 @@
     <ClCompile Include="3.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="5.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="6.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="7.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="4.c" />
+    <ClCompile Include="4.c">
+      <FileType>CppCode</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
