--- a/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar.vcxproj
+++ b/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar/2021.06.01_SW_Seminar.vcxproj
@@ -154,7 +154,10 @@
     <ClCompile Include="6.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="7.c" />
+    <ClCompile Include="7.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="8.c" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="4.c">
